corrigindo imagem responsiva
corrigindo a imagem que não estavam responsiva e o titulo que estava grande de mais e vazando

--- a/desafios/DESAFIO10/index.html
+++ b/desafios/DESAFIO10/index.html
@@ -29,7 +29,7 @@
                 <p>A primeira tentativa de criar um mascote surgiu em 2007 e veio de um desenvolvedor chamado <a href="#" class="a3">Dan Morrill🔗.</a> Ele conta que abriu o <a href="#" class="a3">Inkscape🔗</a> (software livre para vetorização de imagens) e criou sua própria versão de robô. O objetivo era apenas personificar o sistema apenas para a a sua equipe, não existia nenhuma solicitação da empresa para a criação de um mascote.
                 </p>
                 <picture>
-                    <source media="(max-width: 1010px)" srcset="pacote-projeto-d010/imagens/dan-droids-pq.png" type="image/png">
+                    <source media="(max-width: 600px)" srcset="pacote-projeto-d010/imagens/dan-droids-pq.png" type="image/png">
                     <img src="pacote-projeto-d010/imagens/dan-droids.png" alt="Imagem Android">
                 </picture>
                 <p>Essa primeira versão bizarra até foi batizada em homenagem ao seu criador: seriam os <a href="#" class="a3">Dandroids</a>.</p>
@@ -38,11 +38,11 @@
                 <h2 class="f2">Surge um novo mascote</h2>
                 <p>A ideia de ter um mascote foi amadurecendo e a missão foi passada para uma profissional da área. A ilustradora Russa <a href="#" class="a3">Irina Blok🔗</a>, também funcionária do Google, ficou com a missão de representar o pequeno robô de uma maneira mais agradável.</p>
                 <picture>
-                    <source media="(max-width: 1050px)" srcset="pacote-projeto-d010/imagens/irina-blok-pq.jpg" type="image/png">
+                    <source media="(max-width: 600px)" srcset="pacote-projeto-d010/imagens/irina-blok-pq.jpg" type="image/png">
                     <img src="pacote-projeto-d010/imagens/irina-blok.jpg" alt="irina blok">
                 </picture>
                 <p>A ideia principal da Irina era representar tudo graficamente com poucos traços e de forma mais chapada. O desenho também deveria gerar identificação rápida com quem o olha. Surgiu então o <a href="#" class="a3">Bugdroid</a>, o novo mascote do Android.</p>
-                <img src="pacote-projeto-d010/imagens/bugdroid.png" alt="bugdroid">
+                <img src="pacote-projeto-d010/imagens/bugdroid.png" id="img1" alt="bugdroid">
                 <p>A principal inspiração para os traços do novo <a href="#" class="a3">Bugdroid</a> veio daqueles bonequinhos que ilustram portas de banheiro para indicar o gênero de cada porta. Conta a lenda que a artista estava criando em sua mesa no escritório do <a href="#" class="a3">Google</a> e olhou para o lado dos banheiros e a identificação foi imediata: simples, limpo, objetivo.</p>
                     <div class="video">
                         <iframe width="720" height="430" src="https://www.youtube.com/embed/l2UDgpLz20M?si=8nAJAFmMz8IKWJy8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -62,8 +62,6 @@
                     <li>✔ 2.3 - <a href="#" class="a2">Gingerbread</a></li>
                     <li>✔ 3.0 - <a href="#" class="a2">Honeycomb</a></li>
                     <li>✔ 4.0 - <a href="#" class="a2">Ice Cream</a></li>
-                </ul>
-                <ul class="lista2" type="none">
                     <li>✔ 4.1 - <a href="#" class="a2">Jelly Bean</a></li>
                     <li>✔ 4.4 - <a href="#" class="a2">KitKat</a></li>
                     <li>✔ 5.0 - <a href="#" class="a2">Lolipop</a></li>
