--- a/exercicios/exe023/tabela002.html
+++ b/exercicios/exe023/tabela002.html
@@ -11,7 +11,8 @@
 
         table {
             width: 500px;
-            border-collapse: collapse;  
+            border-collapse: collapse;
+            position: relative;
         }
 
         td, th {
@@ -19,13 +20,38 @@
             padding: 10px;
         }
 
+        caption {
+            font-size: 1em;
+            font-weight: bold;
+            padding: 10px;
+            background-color: lightgray;
+        }
+
         thead, tfoot {
             background-color: gray;
             color: white;
         }
 
+        thead > tr > th {
+            position: sticky;
+            top: -1px;
+            background-color: gray;
+        }
+
+        tbody > tr:nth-child(odd) {
+            background-color: lightcyan;
+        }
+
+        tbody > tr:nth-child(even) {
+            background-color: lightgrey;
+        }
+
         td.num {
             text-align: right;
+        }
+
+        th#populacao {
+            width: 100px;
         }
 
     </style>
@@ -43,10 +69,11 @@
     -->
 
     <table>
+        <caption>População das unidades federativas</caption>
         <thead>
             <tr>
-                <th>Estado</th>
-                <th>População</th>
+                <th scope="col">Estado</th>
+                <th scope="col" id="populacao">População</th>
             </tr>
         </thead>
         <tbody>
@@ -162,11 +189,16 @@
         </tbody>
         <tfoot>
             <tr>
-                <th>Total de Habitantes</th>
+                <th scope="row">Total de Habitantes</th>
                 <td class="num"><strong>212 583 720</strong></td>
             </tr>
         </tfoot>
     </table>
-      
+      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit, neque quisquam. Sequi dolorum reprehenderit a provident, porro ipsa error quae non harum voluptatibus placeat, magnam, optio alias vel iure temporibus? Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus, animi hic. Perspiciatis, laborum! Ab modi dolorem voluptatum deleniti rem natus ad non in nisi! Perferendis nemo consequatur at numquam eligendi. Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi quo, voluptates ipsam iusto, natus dolores corrupti aliquam inventore rem expedita repellat nemo temporibus, vitae earum pariatur esse! Iure, ab quibusdam.</p>
+      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit, neque quisquam. Sequi dolorum reprehenderit a provident, porro ipsa error quae non harum voluptatibus placeat, magnam, optio alias vel iure temporibus? Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus, animi hic. Perspiciatis, laborum! Ab modi dolorem voluptatum deleniti rem natus ad non in nisi! Perferendis nemo consequatur at numquam eligendi. Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi quo, voluptates ipsam iusto, natus dolores corrupti aliquam inventore rem expedita repellat nemo temporibus, vitae earum pariatur esse! Iure, ab quibusdam.</p>
+      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit, neque quisquam. Sequi dolorum reprehenderit a provident, porro ipsa error quae non harum voluptatibus placeat, magnam, optio alias vel iure temporibus? Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus, animi hic. Perspiciatis, laborum! Ab modi dolorem voluptatum deleniti rem natus ad non in nisi! Perferendis nemo consequatur at numquam eligendi. Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi quo, voluptates ipsam iusto, natus dolores corrupti aliquam inventore rem expedita repellat nemo temporibus, vitae earum pariatur esse! Iure, ab quibusdam.</p>
+      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit, neque quisquam. Sequi dolorum reprehenderit a provident, porro ipsa error quae non harum voluptatibus placeat, magnam, optio alias vel iure temporibus? Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus, animi hic. Perspiciatis, laborum! Ab modi dolorem voluptatum deleniti rem natus ad non in nisi! Perferendis nemo consequatur at numquam eligendi. Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi quo, voluptates ipsam iusto, natus dolores corrupti aliquam inventore rem expedita repellat nemo temporibus, vitae earum pariatur esse! Iure, ab quibusdam.</p>
+      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit, neque quisquam. Sequi dolorum reprehenderit a provident, porro ipsa error quae non harum voluptatibus placeat, magnam, optio alias vel iure temporibus? Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus, animi hic. Perspiciatis, laborum! Ab modi dolorem voluptatum deleniti rem natus ad non in nisi! Perferendis nemo consequatur at numquam eligendi. Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi quo, voluptates ipsam iusto, natus dolores corrupti aliquam inventore rem expedita repellat nemo temporibus, vitae earum pariatur esse! Iure, ab quibusdam.</p>
+      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit, neque quisquam. Sequi dolorum reprehenderit a provident, porro ipsa error quae non harum voluptatibus placeat, magnam, optio alias vel iure temporibus? Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus, animi hic. Perspiciatis, laborum! Ab modi dolorem voluptatum deleniti rem natus ad non in nisi! Perferendis nemo consequatur at numquam eligendi. Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi quo, voluptates ipsam iusto, natus dolores corrupti aliquam inventore rem expedita repellat nemo temporibus, vitae earum pariatur esse! Iure, ab quibusdam.</p>
 </body>
 </html>
