--- a/exercicios/exe004/index.html
+++ b/exercicios/exe004/index.html
@@ -1,13 +1,25 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="favicon-lampada.png" type="image/x-icon">
-    <title>Teste de Favicon</title>
+    <title>Meu Primeiro Exercicio</title>
 </head>
 
 <body>
-    <h1>Olha esse favicon aqui em cima</h1>
+<h1>Olá Mundo</h1>
+<hr>
+<p>Esse e meu segundo documento Html</p>
+<p>Estou testando a escrita</p>
+
+
+
+    
 </body>
+
+
+
+
+
 </html>
