--- a/exercicios/exe012/index.html
+++ b/exercicios/exe012/index.html
@@ -3,22 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Videos com HTML5</title>
+    <title>Estilos Inline</title>
 </head>
-<body>
-    <h1>Inserindo vídeos hospedados localmente</h1>
-    <p>Este video está hospedado no meu própio servidor</p>
+<body style="background-color: cadetblue; color: black; font-family: Arial, Helvetica, sans-serif; font-size: 20px; text-align: justify;">
+    <h1 style="color: aqua;">Capítulo 1</h1>
 
-    <video width="560" height="350" poster="imagens/capa-video.png" controls>
-        <source src="midia/meu-video..mp4" type="video/mp4">
-        <source src="midia/meu-video..m4v" type="video/mp4">
-        <source src="midia/meu-video..webm" type="video/webm">
-        <source src="midia/meu-video..ogg" type="video/ogg">
-        <p>Seu navegador não tem compatibilidade com reprodução de videos.</p>
-    </video>
+    <h2 style="color: burlywood;">Capítulo 1.1</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque beatae odio, vel adipisci, perspiciatis cupiditate possimus veritatis repellendus quo, explicabo similique et. Repudiandae iste nihil quas accusantium repellat impedit! Architecto.</p>
 
-    <h1>Inserindo videos do youtube</h1>
+    <h2 style="color: burlywood;">Capítulo 1.2</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia error saepe expedita unde nobis dicta, eos necessitatibus? Quidem nesciunt ut ipsum, exercitationem expedita, nam quasi aliquid nemo magni, nisi aliquam.</p>
 
-    <iframe width="560" height="350" src="https://www.youtube.com/embed/OzUnqQk4eOg?si=vX0IzRisgCaguOXe" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" ></iframe>
+    <h1 style="color:aqua;">Capítulo 2</h1>
+
+    <h2 style="color: burlywood;">Capítulo 2.1</h2>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Architecto eius deserunt, illum praesentium blanditiis nam maxime recusandae voluptates, delectus cumque vel, corrupti natus saepe. Consectetur non laudantium aperiam dolorum aliquid!</p>
+
+    <h2 style="color: burlywood;">Capítulo 2.2</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, voluptate expedita? Voluptates laudantium vel commodi aut adipisci temporibus, quos suscipit sequi error doloribus libero deserunt necessitatibus praesentium nesciunt magnam tenetur.</p>
+
+
 </body>
 </html>
