--- a/exercicios/exe006/favicon.html
+++ b/exercicios/exe006/favicon.html
@@ -1,25 +1,13 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meu Primeiro Exercicio</title>
+    <link rel="shortcut icon" href="favicon-lampada.png" type="image/x-icon">
+    <title>Teste de Favicon</title>
 </head>
 
 <body>
-<h1>Olá Mundo</h1>
-<hr>
-<p>Esse e meu segundo documento Html</p>
-<p>Estou testando a escrita</p>
-
-
-
-    
+    <h1>Olha esse favicon aqui em cima</h1>
 </body>
-
-
-
-
-
 </html>
