--- a/exercicios/exe025/mq005/index.html
+++ b/exercicios/exe025/mq005/index.html
@@ -4,12 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Media Query</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=menu" />
     <link rel="stylesheet" href="estilos/style.css">
 </head>
 <body>
     <header>
         <h1>Meu site</h1>
-        <nav>
+        <span id="burguer" class="material-symbols-outlined" onclick="clickMenu()">
+            menu
+        </span>
+
+        <nav id="itens">
             <ul>
                 <li><a href="#">Opção 1</a></li>
                 <li><a href="#">Opção 2</a></li>
@@ -18,7 +23,9 @@
                 <li><a href="#">Opção 5</a></li>
             </ul>
         </nav>
+
     </header>
+
     <main>
         <article>
             <h2>Testando Media Query</h2>
@@ -29,6 +36,14 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde deserunt dolor sapiente nobis eius. Ad in repudiandae nam ab eaque quia minima cum atque, voluptatem mollitia enim doloribus aspernatur dignissimos. Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis quo excepturi repudiandae nemo aliquam atque quas maxime totam illum iste, veniam vero officia. Molestiae nesciunt sed aut soluta vero impedit? Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, explicabo sunt expedita suscipit debitis accusamus pariatur quos, laborum reprehenderit, vero nobis ex cupiditate sint quia distinctio nesciunt. Placeat, officiis consequuntur?</p>
         </article>
     </main>
-
+    <script>
+        function clickMenu() {
+            if (itens.style.display == 'block') {
+                itens.style.display = 'none'
+            } else {
+                itens.style.display = 'block'
+            }
+        }
+    </script>
 </body>
 </html>
