--- a/exercicios/exe027/flex009/index.html
+++ b/exercicios/exe027/flex009/index.html
@@ -8,26 +8,27 @@
         div.container {
             background-color: lightsalmon;
             display: flex;
+            flex-flow: row nowrap;
         }
 
         div.item {
             background-color: lightblue;
             border: 1px solid black;
-            flex: auto;
             text-align: center;
+            flex-basis: 150px;
         }
 
-
+        
     </style>
 </head>
 <body>
     <div class="container">
         <div class="item">A</div>
-        <div class="item">B</div>
+        <div class="item">BBBBBBBBBB</div>
         <div class="item">C</div>
-        <div class="item">D</div>
+        <div class="item">DDDDDDDDDDDDDDDDDDD</div>
         <div class="item">E</div>
-        <div class="item">F</div>
+        <div class="item">FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF</div>
         <div class="item">G</div>
     </div>
 </body>
